--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,10 @@ dependencies:
   http: ^1.1.0
   intl: ^0.20.2
   sqflite: ^2.4.1
-
+  cloud_firestore: ^4.15.5
+  crypto: ^3.0.3
+  firebase_core: ^2.27.0
+  qr_flutter: ^4.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
