--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,21 @@ dependencies:
   http: ^1.1.0
   intl: ^0.20.2
   sqflite: ^2.4.1
-  cloud_firestore: ^4.15.5
+  cloud_firestore: ^5.6.5
   crypto: ^3.0.3
-  firebase_core: ^2.27.0
+  firebase_core: ^3.12.1
   qr_flutter: ^4.1.0
+  path: ^1.8.3
+  firebase_auth: ^5.5.1
+  flutter_barcode_scanner: ^2.0.0
+  go_router: ^14.8.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  share_plus: ^10.1.4
+
+  sqflite_common_ffi_web: ^0.4.5+4
+
 
 dev_dependencies:
   floor_generator: ^1.4.2
